# RustyPong

./: .gitignore  Cargo.toml  README.md
lib/gl/: Cargo.toml
lib/gl/src/: lib.rs
src/: main.rs  render_gl.rs  triangle.frag  triangle.vert
