[package]
name = "rusty_pong"
version = "0.1.0"
authors = ["SilasPC <pockendahl@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
gl = "0.10.0"